--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.2-rc2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
